--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,17 +4,19 @@
     <article class="left cf pv5 ph3 ph4-ns mw7">
       <header>
         <p class="f6 b helvetica tracked">
-          {{ humanize .Section | upper  }}
+        <a href="{{.Section | absURL }}" class="color-inherit dim link">{{ humanize .Section | upper  }} </a>
         </p>
         <h1 class="f1">
           {{ .Title }}
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
+        {{ if .Params.image }}
         <div class="dtc v-top">
-          {{ $img := .Params.image | absURL}}
-          <img src="{{ $img }}" class="mw5 db" alt="image from {{.Title}}" width="200px"/>
+            {{ $img := .Params.image | absURL}}
+            <img src="{{ $img }}" class="mw5 db" alt="image from {{.Title}}" width="200px"/>
         </div>
+        {{ end }}
         <div class="dtc v-top pl3">
           <p class="lh-copy mv0">
             {{ .Content }}
