--- a/layouts/partials/summary-with-bubble-image.html
+++ b/layouts/partials/summary-with-bubble-image.html
@@ -3,11 +3,10 @@
   {{ $base = substr . 0 -4 }}
 {{ end }}
 {{ $featured_image := printf "/%s%s" $base "-bubble.png" }}
-<article class="bb b--black-10">
-  <div class="db pv4 mr3 ph0-l no-underline dark-gray">
+<article class="bb b--black-20">
+  <div class="db pv2 ph0-l dark-gray bg-near-white">
     <div class="flex flex-column flex-row-ns">
       {{ if .Params.image }}
-          {{/* Trimming the slash and adding absURL make sure the image works no matter where our site lives */}}
         {{ $featured_image := (trim $featured_image "/") | absURL }}
         <div class="pl3-ns pr3-ns mb4 mb0-ns w-20 w-50-l">
           <a href="{{.Permalink}}" class="db grow">
@@ -15,18 +14,17 @@
           </a>
         </div>
       {{ end }}
-      <div class="blah w-100{{ if .Params.featured_image }} w-60-ns pl3-ns{{ end }}">
-        <h1 class="f3 fw1 athelas mt0 lh-title">
+      <div class="blah w-100">
+        <h1 class="f4 fw1 athelas ma0 pa0 lh-title">
           <a href="{{.Permalink}}" class="color-inherit dim link">
-            {{ .Title }}
+            {{ .Title }} <br>
             </a>
+            {{/* .Params.email */}}
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
           {{/* .Summary */}}
         </div>
           <a href="{{.Permalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">{{ $.Param "read_more_copy" | default (i18n "readMore") }}</a>
-        {{/* TODO: add author
-        <p class="f6 lh-copy mv0">By {{ .Author }}</p> */}}
       </div>
     </div>
   </div>
