--- a/layouts/people/single.html
+++ b/layouts/people/single.html
@@ -4,7 +4,7 @@
     <article class="left cf pv5 ph3 ph4-ns mw7">
       <header>
         <p class="f6 b helvetica tracked">
-          {{ humanize .Section | upper  }}
+        <a href="{{.Section | absURL }}" class="color-inherit dim link">{{ humanize .Section | upper  }} </a>
         </p>
         <h1 class="f1">
           {{ .Title }}
