--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -15,12 +15,24 @@
               {{ .Title }}
             </a>
           </h1>
-        <div class="f5 mb1">
-          {{ partial "authorList.html" . }}
-        </div>
+            <div class="mb0 f5 gray">
+              {{ partial "authorList.html" . }}
+              <div>
+              {{ .Params.datePublished }}
+              </div>
+              <div>
+              </div>
+                {{ partial "journal-link-bar.html" . }}
+            </div>
+            {{ if eq .Section "publications" }}
+              <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+                {{- .Summary -}}
+              </div>
+            {{ else }}
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
           {{- .Content -}}
         </div>
+          {{ end }}
           <a href="{{.Permalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">{{ $.Param "read_more_copy" | default (i18n "readMore") }}</a>
         {{/* TODO: add author
         <p class="f6 lh-copy mv0">By {{ .Author }}</p> */}}
