--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,15 +1,21 @@
 {{ define "main" }}
-  <article class="pa3 pa4-ns nested-copy-line-height nested-img">
-    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-      {{- .Content -}}
+<article class="mh4 mt2 mw7-l nested-copy-line-height nested-img center">
+{{ if .Params.nav }}
+  {{ partial "nav-bar.html" .Params.nav }}
+{{ end }}
+  {{ with .Content }}
+    <section class="cf measure-wide-l left pa4 f4 lh-copy ">
+      {{- . -}}
     </section>
-    <section class="flex-ns flex-wrap justify-around mt5">
-      {{ range .Paginator.Pages }}
-        <div class="relative w-100 mb4 bg-white">
-          {{- partial "summary-with-image.html" . -}}
-        </div>
-      {{ end }}
-    </section>
-    {{- template "_internal/pagination.html" . -}}
-  </article>
+  {{ end }}
+  <section class="flex-ns flex-wrap justify-around mt1 mt4-l">
+    {{ $list := where .Site.Pages "Section" .Section }}
+    {{ $list := symdiff $list (slice .) }}
+    {{ range $list}}
+      <div class="relative w-100 mv2-l mv1 bg-white">
+        {{- partial "summary-with-image.html" . -}}
+      </div>
+    {{ end }}
+  </section>
+</article>
 {{ end }}
