--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,8 @@
 {{ define "main" }}
-  <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
+<article class="dark-gray ph4 mh2 center">
+  <div class="cf measure-wide-l center ph5-l pv3 pv4-l f4 lh-copy ">
     {{ .Content }}
-  </article>
+  </div>
 
   {{ range  .Site.Params.homeList }}
     {{ $section := where $.Site.RegularPages "Section" "in" . }}
@@ -11,10 +12,9 @@
       {{ $section_name := . }}
 
 
-      <div class="pa3 pa4-ns w-100 w-70-ns center">
-        {{/* Use $section_name to get the section title. Use "with" to only show it if it exists */}}
+      <div class="pa1 center mw7-l">
          {{ with $.Site.GetPage "section" $section_name }}
-            <h1 class="flex-none">
+            <h1 class="flex-none f3.5">
               {{ $.Param "recent_copy" | default (i18n "recentTitle" .) }}
             </h1>
           {{ end }}
@@ -24,22 +24,23 @@
         <section class="w-100 mw8">
           {{/* Range through the first $n_posts items of the section */}}
           {{ range (first $n_posts $section) }}
-            <div class="relative w-100 mb4">
+            <div class="relative w-100 mb1">
               {{ partial "summary-with-image.html" . }}
             </div>
           {{ end }}
         </section>
 
         {{ if ge $section_count (add $n_posts 1) }}
-        <section class="w-100">
+        <section class="w-100 ma2">
           {{/* As above, Use $section_name to get the section title, and URL. Use "with" to only show it if it exists */}}
           {{ with $.Site.GetPage "section" $section_name }}
-            <a href="{{ .Permalink }}" class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">{{ i18n "allTitle" . }}</a>
+            <a href="{{ .Permalink }}" class="center link db f6 pa2 br3 bg-mid-gray white dim w4 tc">{{ i18n "allTitle" . }}</a>
           {{ end }}
-          </section>
+        </section>
         {{ end }}
 
         </div>
     {{ end }}
   {{ end }}
+</article>
 {{ end }}
