--- a/layouts/members/list.html
+++ b/layouts/members/list.html
@@ -1,28 +1,28 @@
 {{ define "main" }}
-  <article class="pa6 pa4jns nested-copy-line-height nested-img mw9-l center">
+  <article class="pv1 ph2 pl5-l nested-copy-line-height nested-img mw8-l center">
     {{ if .Content }}
       <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l measure-wide lh-copy mid-gray">
         {{- .Content -}}
       </section>
     {{ end }}
-      {{ $peoplePages := where .Site.Pages "Section" "people" }}
-      {{ $peoplePages := symdiff $peoplePages (slice .) }}
+      {{ $membersPages := where .Site.Pages "Section" "members" }}
+      {{ $membersPages := symdiff $membersPages (slice .) }}
 
       {{ $positions := slice "PI" "adminAssistant" "postDoc" "grad" "COOP" }}
       {{ $titleCards := slice "Principle Investigator" "Administrative Assistant" "Postdoctoral Fellows" "Graduate Students" "Undergraduate Research Associates" "Alumni" }}
       {{ range (seq 0 (sub (len $positions) 1) ) }}
         <a id="{{ index $positions . }}"></a>
         <h1>{{ index $titleCards . }}</h1>
-        <section class="flex-ns flex-wrap mt1 ph2-l">
-          {{ $list := where $peoplePages ".Params.tags" "intersect" (slice (index $positions .))  }}
-          {{ $alumn := where $peoplePages ".Params.tags" "intersect" (slice "alumn")  }}
+        <section class="flex flex-wrap mt1 ph2-l">
+          {{ $list := where $membersPages ".Params.tags" "intersect" (slice (index $positions .))  }}
+          {{ $alumn := where $membersPages ".Params.tags" "intersect" (slice "alumn")  }}
           {{ $diff := intersect $list $alumn }}
           {{ $list := symdiff $list $diff }}
 
           {{ with $list }}
           {{ range . }}
-            <div class="relative w-100 w-30-l ma2 mid-gray">
-              <div class="bg-near-white">
+            <div class="relative w-100 w-40-l ma2 mid-gray">
+              <div class="bg-white">
                 {{- partial "summary-with-bubble-image.html" . -}}
               </div>
             </div>
@@ -34,7 +34,7 @@
         <h1> Alumni </h1>
         <section class="flex-ns flex-wrap mt1 ph2-l">
           {{ range .Site.Taxonomies.tags.alumn }}
-            <div class="relative w-100 w-30-l ma2 mid-gray">
+            <div class="relative w-100 w-40-l ma2 mid-gray">
               <div class="bg-near-white">
                 {{- partial "summary-with-bubble-image.html" . -}}
               </div>
