--- a/layouts/partials/position.html
+++ b/layouts/partials/position.html
@@ -6,4 +6,6 @@
   <a href="{{ printf "%s/#%s" (.Section | absURL) "adminAssistant"}}" class="color-inherit dim link">Administrative Assistant</a>
 {{ else if in .Params.tags "COOP" }}
   <a href="{{ printf "%s/#%s" (.Section | absURL) "COOP"}}" class="color-inherit dim link">Undergraduate Research Associate</a>
+{{ else if in .Params.tags "PI" }}
+  <a href="{{ printf "%s/#%s" (.Section | absURL) "COOP"}}" class="color-inherit dim link">Principle Investigator</a>
 {{ end }}
