--- a/layouts/partials/summary-with-bubble-image.html
+++ b/layouts/partials/summary-with-bubble-image.html
@@ -3,27 +3,24 @@
   {{ $base = substr . 0 -4 }}
 {{ end }}
 {{ $featured_image := printf "/%s%s" $base "-bubble.png" }}
-<article class="bb b--black-20">
+<article class="bb b--black-10">
   <div class="db pv2 ph0-l dark-gray">
-    <div class="flex flex-column flex-row-ns">
+    <div class="flex flex-row">
       {{ if .Params.image }}
         {{ $featured_image := (trim $featured_image "/") | absURL }}
-        <div class="pl3-ns pr3-ns mb4 mb0-ns w-20 w-50-l">
+        <div class="pa1 pl3-ns pr3-ns mb4 mb0-ns w-20 w-50-l">
           <a href="{{.Permalink}}" class="db grow">
             <img src="{{ $featured_image }}" class="w-100" alt="image from {{ .Title }}">
           </a>
         </div>
       {{ end }}
-      <div class="blah w-100">
+      <div class="blah w-100 pa1 pl2">
         <h1 class="f4 fw1 athelas ma0 pa0 lh-title">
           <a href="{{.Permalink}}" class="color-inherit dim link">
             {{ .Title }} <br>
             </a>
             {{/* .Params.email */}}
         </h1>
-        <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          {{/* .Summary */}}
-        </div>
           <a href="{{.Permalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">{{ $.Param "read_more_copy" | default (i18n "readMore") }}</a>
       </div>
     </div>
