--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -1,6 +1,6 @@
 {{ $featured_image := .Params.image | absURL }}
 <article class="bb b--black-10">
-  <div class="db pv4 ph3 no-underline dark-gray">
+  <div class="db pv2 mh3 mv3-l mh4-l no-underline dark-gray">
     <div class="flex flex-column flex-row-ns">
       {{ if .Params.image }}
         <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
@@ -9,33 +9,27 @@
           </a>
         </div>
       {{ end }}
-      <div class="blah w-100{{ if .Params.featured_image }} w-60-ns pl3-ns{{ end }}">
+      <div class="blah w-100{{ if .Params.image }} w-60-ns pl3-ns{{ end }}">
           <h1 class="f3 near-black mb0 mt0">
             <a href="{{.Permalink}}" class="color-inherit dim link">
               {{ .Title }}
             </a>
           </h1>
-            <div class="mb0 f5 gray">
-              {{ partial "authorList.html" . }}
-              <div>
-              {{ .Params.datePublished }}
-              </div>
-              <div>
-              </div>
-                {{ partial "journal-link-bar.html" . }}
+            <div class="mb3 f5 gray">
+              <div class="mv2"> {{ partial "authorList.html" . }} </div>
+              <div class="mv2"> {{ .Params.datePublished }} </div>
+              <div class="mv2"> {{ partial "journal-link-bar.html" . }} </div>
             </div>
             {{ if eq .Section "publications" }}
-              <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+              <div class="f5 f5-l lh-title nested-copy-line-height nested-links">
                 {{- .Summary -}}
               </div>
             {{ else }}
-        <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+        <div class="f5 f5-l lh-title nested-links">
           {{- .Content -}}
         </div>
           {{ end }}
           <a href="{{.Permalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">{{ $.Param "read_more_copy" | default (i18n "readMore") }}</a>
-        {{/* TODO: add author
-        <p class="f6 lh-copy mv0">By {{ .Author }}</p> */}}
       </div>
     </div>
   </div>
