--- a/layouts/members/single.html
+++ b/layouts/members/single.html
@@ -14,7 +14,10 @@
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links dark-gray">
         <div class="dtc v-top">
-          {{ $img := .Params.image | absURL}}
+          {{ $img := .Params.image | absURL }}
+		  {{ if not ( fileExists (printf "%s%s" "static/" .Params.image) ) }}
+			{{ $img = "images/TheThinker_small.png" | absURL }}
+		  {{ end }}
           <img src="{{ $img }}" class="mw5 db" alt="image from {{.Title}}" width="150px"/>
         </div>
         <div class="dtc v-top pl3">
