--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -1,15 +1,21 @@
 {{ $featured_image := .Params.image | absURL }}
+{{ $isImg := false }}
+{{ if .Params.image }}
+  {{ if ( fileExists (printf "%s%s" "static/" .Params.image) ) }}
+    {{ $isImg = true }}
+  {{ end }}
+{{ end }}
 <article class="bb b--black-10">
   <div class="db pv2 mh3 mv3-l mh4-l no-underline dark-gray">
     <div class="flex flex-column flex-row-ns">
-      {{ if .Params.image }}
+	  {{ if $isImg }}
         <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
           <a href="{{.Permalink}}" class="db grow">
             <img src="{{ $featured_image }}" class="img" alt="image from {{ .Title }}">
           </a>
         </div>
       {{ end }}
-      <div class="blah w-100{{ if .Params.image }} w-60-ns pl3-ns{{ end }}">
+      <div class="blah w-100{{ if $isImg }} w-60-ns pl3-ns{{ end }}">
           <h1 class="f3 near-black mb0 mt0">
             <a href="{{.Permalink}}" class="color-inherit dim link">
               {{ .Title }}
