Modified the format of journal links to include publication date. the datePublished field is now obsolete

--- a/layouts/partials/journal-link-bar.html
+++ b/layouts/partials/journal-link-bar.html
@@ -5,6 +5,9 @@
     {{ if .Params.issue }}
       {{ $journal = printf "%s, %s" $journal .Params.issue }}
     {{ end }}
+	{{ if .Params.date }}
+      {{ $journal = printf "%s, (%s)" $journal (dateFormat "2006" .Params.date) }}
+	{{ end }}
   {{ end }}
 
   {{ with .Params.link }}
