--- a/layouts/partials/summary-with-bubble-image.html
+++ b/layouts/partials/summary-with-bubble-image.html
@@ -8,7 +8,7 @@
     <div class="flex flex-row">
     {{ if $featured_image }}
       {{ if not ( fileExists (printf "static/%s" $featured_image ) )}}
-      	{{ $featured_image = "images/TheThinker_small-bubble.png"}}
+      	{{ $featured_image = "images/default-bubble.png"}}
       {{ end }}
         {{ $featured_image := $featured_image | absURL }}
         <div class="pa1 pl3-ns pr3-ns mb4 mb0-ns w-20 w-50-l">
