--- a/layouts/partials/summary-with-bubble-image.html
+++ b/layouts/partials/summary-with-bubble-image.html
@@ -22,7 +22,9 @@
           <a href="{{.Permalink}}" class="color-inherit dim link">
             {{ .Title }} <br>
             </a>
-            {{/* .Params.email */}}
+	    {{ .Params.tenure}}
+	
+
         </h1>
           <a href="{{.Permalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">{{ $.Param "read_more_copy" | default (i18n "readMore") }}</a>
       </div>
