--- a/layouts/members/list.html
+++ b/layouts/members/list.html
@@ -9,7 +9,7 @@
       {{ $membersPages := symdiff $membersPages (slice .) }}
 
       {{ $positions := slice "PI" "adminAssistant" "postDoc" "grad" "COOP" }}
-      {{ $titleCards := slice "Principle Investigator" "Administrative Assistant" "Postdoctoral Fellows" "Graduate Students" "Undergraduate Research Associates" "Alumni" }}
+      {{ $titleCards := slice "Principal Investigator" "Administrative Assistant" "Postdoctoral Fellows" "Graduate Students" "Undergraduate Research Associates" "Alumni" }}
       {{ range (seq 0 (sub (len $positions) 1) ) }}
         <a id="{{ index $positions . }}"></a>
         <h1>{{ index $titleCards . }}</h1>
