--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -6,9 +6,9 @@
        
     <div class="flex-l items-center">
       {{ partial "i18nlist.html" . }}
-      {{ if .Site.Menus.main }}
+      {{ if .Site.Menus.mainmenu }}
         <ul class="pl0 mr3">
-          {{ range .Site.Menus.main }}
+          {{ range .Site.Menus.mainmenu }}
           <li class="list f5 f4-ns fw4 dib pr3">
             <a class="hover-white no-underline white-70" href="{{ .URL }}" title="{{ .Name }} page">
               {{ .Name }}
