--- a/layouts/partials/site-header-alt.html
+++ b/layouts/partials/site-header-alt.html
@@ -2,13 +2,13 @@
 {{ if $featured_image }}
   {{/* Trimming the slash and adding absURL make sure the image works no matter where our site lives */}}
   {{ $featured_image := (trim $featured_image "/") | absURL }}
-  <header class="cover bg-top" style="background-image: url('{{ $featured_image }}'); background-attachment: fixed; background-size:cover;">
-    <div class="{{ .Site.Params.cover_dimming_class | default "bg-black-30" }}">
-      {{ partial "site-navigation.html" .}}
-      <div class="tl pv5 pv6-l ph3 ph4-ns">
+  <header class="cover bg-top" style="background-image: url('{{ $featured_image }}'); background-attachment: fixed; background-size:contain; resize:both;">
+    <div class="{{ .Site.Params.cover_dimming_class | default "bg-black-20" }}">
+      {{ partial "site-navigation-2.html" .}}
+      <div class="tr pv5 pv6-l ph3 ph4-ns">
 {{/* change pv number above to change vertical padding, m for medium screen size, l for large e.g. pv3-m */}}
-        <h1 class="f1 white-90 f-subheadline-2 fw4 mb0 1h-title">
-          {{ .Title | default .Site.Title }}</h1>
+        <h2 class="f2 white-80 f-subheadline-2 fw2 mb0 1h-title">
+          {{ .Title | default .Site.Title }}
 
         {{ with .Params.description }}
           <h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt0 mb0">
@@ -22,7 +22,7 @@
   <header>
     <div class="pb2-m pb0-l {{ .Site.Params.background_color_class | default "bg-black" }}">
       {{ partial "site-navigation.html" . }}
-      <div class="tl pb3 ph3 ph4-ns">
+      <div class="tl pv0 pv4-l ph3 ph4-ns">
         <h2 class="f2 white-80 f-subheadline-2 ph3 fw2 white-70 mb0 lh-title">
           {{ .Title | default .Site.Title }}
         </h2>
@@ -33,5 +33,22 @@
         {{ end }}
       </div>
     </div>
-  </header>
 {{ end }}
+<nav class="pv0 f0 ph3 ph4-ns" role="navigation">
+      {{ partial "i18nlist.html" . }}
+      {{ if .Site.Menus.mainmenu }}
+        <ul class="pl0 mr3">
+          {{ range .Site.Menus.mainmenu }}
+          <li class="list f5 f4-ns fw4 dib pr3">
+            <a class="hover-black-50 no-underline black-70" href="{{ .URL }}" title="{{ .Name }} page">
+              {{ .Name }}
+            </a>
+          </li>
+          {{ end }}
+        </ul>
+      {{ end }}
+      {{ partialCached "social-follow.html" . }}
+    </div>
+</nav>
+  </header>
+
