the publist shortcode will now accept a list of publications as well as a single publication

--- a/layouts/shortcodes/publist.html
+++ b/layouts/shortcodes/publist.html
@@ -1,3 +1,10 @@
-{{ with .Site.GetPage (printf "%s%s" "/content/publications/" (index .Params 0) ) }}
-  {{ partial "pub-list-2.html" (slice .) }}
+
+{{ $list := slice }}
+{{ range .Params }}
+  {{ with $.Site.GetPage ( printf "%s%s" "/content/publications/" . ) }}
+    {{ $list = $list | append  . }}
+  {{ end }}
+{{ end }}
+{{ if ge (len $list) 1 }}
+  {{ partial "pub-list-2.html" $list }}
 {{ end }}
