--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,6 +1,6 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
-    <a href="{{ .Site.BaseURL }}" class="f3 fw4 hover-white no-underline white dib">
+    <a href="{{ .Site.BaseURL }}" class="f3 pv0 fw4 hover-white no-underline white dib">
       {{ .Site.Title }}<p class ="f5 white">Principal Investigator - Prof. Rajibul Islam, University of Waterloo</p>
     </a>
        
