added MathJax support

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+{{ partial "mathjax.html"}}
 <article class="mh4 mt2 mw7-l nested-copy-line-height nested-img center">
 {{ if .Params.nav }}
   {{ partial "nav-bar.html" .Params.nav }}
