--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,6 +6,7 @@
     {{ $isImg = true }}
   {{ end }}
 {{ end }}
+{{ partial "mathjax.html" }}
   <div class="flex-l mt2 mw8 center">
     <article class="left cf pv5 ph3 ph4-ns mw7">
       <header>
