--- a/layouts/members/single.html
+++ b/layouts/members/single.html
@@ -1,5 +1,6 @@
 {{ define "header" }}{{ partial "page-header.html" . }}{{ end }}
 {{ define "main" }}
+{{ partial "mathjax.html" }}
     <article class="center cf mv2 ph3 ph4-ns mw7">
       <header>
         <p class="f6 b helvetica tracked">
