--- a/layouts/publications/single.html
+++ b/layouts/publications/single.html
@@ -1,5 +1,6 @@
 {{ define "header" }}{{ partial "page-header.html" . }}{{ end }}
 {{ define "main" }}
+{{ partial "mathjax.html" }}
   <div class="flex-l mt2 mw8 center">
     <article class="center cf tj pv5 ph3 ph4-ns mw7">
       <header>
