colour theme changed - new colour palette is derived from the ion image colour scheme (inferno). header design modified.

--- a/layouts/members/list.html
+++ b/layouts/members/list.html
@@ -35,7 +35,7 @@
         <section class="flex-ns flex-wrap mt1 ph2-l">
           {{ range .Site.Taxonomies.tags.alumn }}
             <div class="relative w-100 w-40-l ma2 mid-gray">
-              <div class="bg-near-white">
+              <div style=" background-color: rgb(233,230,233)">
                 {{- partial "summary-with-bubble-image.html" . -}}
               </div>
             </div>
