--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,7 +1,7 @@
-<nav class="pv3 ph3 ph4-ns" role="navigation">
+<nav class="pt3 pb1 ph3 ph4-ns" style="background-color: rgb(58,54,63)" role="navigation">
   <div class="flex-l justify-between items-center center">
-    <a href="{{ .Site.BaseURL }}" class="f3 pv0 fw4 hover-white no-underline white dib">
-      {{ .Site.Title }}<p class ="f5 white">Principal Investigator - Prof. Rajibul Islam, University of Waterloo</p>
+    <a href="{{ .Site.BaseURL }}" class="f3 pv0 fw4 hover-white no-underline white dib" style="color: rgb(239,237,239); font-size:45px">
+      {{ .Site.Title }}
     </a>
        
     <div class="flex-l items-start">
@@ -20,4 +20,5 @@
       {{ partialCached "social-follow.html" . }}
     </div>
   </div>
+<p class ="f5" style ="color: rgb(230,227,230)">Principal Investigator - Prof. Rajibul Islam, IQC, University of Waterloo</p>
   </nav>
