--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,8 @@
 {{ define "main" }}
-<article class="dark-gray ph2 mh2 center">
-  <div class="cf measure-wide-l center ph2 pv3 pv4-l f5 lh-copy">
+<article class="dark-gray pt3 ph2 mh2 center" style=" background-color: rgb(250,248,250)">
+  <div class="cf mw8 center ph6-l pb4 f4 lh-copy">
     {{ .Content }}
   </div>
-
   {{ range  .Site.Params.homeList }}
     {{ $section := where $.Site.RegularPages "Section" "in" . }}
     {{ $section_count := len $section }}
@@ -12,7 +11,7 @@
       {{ $section_name := . }}
 
 
-      <div class="pa1 center mw7-l">
+      <div class="pa1 center ph5-l ph3-m pt3 pb0 mw8-l" style=" background-color: rgb(233,230,233)">
          {{ with $.Site.GetPage "section" $section_name }}
             <h1 class="flex-none f3.5">
               {{ $.Param "recent_copy" | default (i18n "recentTitle" .) }}
@@ -21,7 +20,8 @@
 
         {{ $n_posts := $.Param "recent_posts_number" | default 3 }}
 
-        <section class="w-100 mw8">
+
+        <section class="w-100 mw8-l">
           {{/* Range through the first $n_posts items of the section */}}
           {{ range (first $n_posts $section) }}
             <div class="relative w-100 mb1">
@@ -31,14 +31,13 @@
         </section>
 
         {{ if ge $section_count (add $n_posts 1) }}
-        <section class="w-100 ma2">
+        <section class="w-100 ma2 pb3">
           {{/* As above, Use $section_name to get the section title, and URL. Use "with" to only show it if it exists */}}
           {{ with $.Site.GetPage "section" $section_name }}
-            <a href="{{ .Permalink }}" class="center link db f6 pa2 br3 bg-mid-gray white dim w4 tc">{{ i18n "allTitle" . }}</a>
+            <a href="{{ .Permalink }}" class="center link db f5  pa2 br3 bg-mid-gray white dim w4 tc" style="background-color: rgb(81,64,81)">{{ i18n "allTitle" . }}</a>
           {{ end }}
         </section>
         {{ end }}
-
         </div>
     {{ end }}
   {{ end }}
