--- a/layouts/members/list.html
+++ b/layouts/members/list.html
@@ -22,7 +22,7 @@
           {{ with $list }}
           {{ range . }}
             <div class="relative w-100 w-40-l ma2 mid-gray">
-              <div class="bg-white">
+              <div style="background-color: rgb(252,251,248)">
                 {{- partial "summary-with-bubble-image.html" . -}}
               </div>
             </div>
