--- a/layouts/members/single.html
+++ b/layouts/members/single.html
@@ -1,7 +1,7 @@
 {{ define "header" }}{{ partial "page-header.html" . }}{{ end }}
 {{ define "main" }}
 {{ partial "mathjax.html" }}
-    <article class="center cf mv2 ph3 ph4-ns mw7">
+    <article class="center cf mt0 pb6 ph3 ph4-ns mw8">
       <header>
         <p class="f6 b helvetica tracked">
           <a href="{{.Section | absURL }}" class="color-inherit dim link">{{ humanize .Section | upper  }} </a>
