--- a/layouts/partials/pub-list-2.html
+++ b/layouts/partials/pub-list-2.html
@@ -1,11 +1,11 @@
 {{ $section := . }}
 {{ $section_count := len $section }}
 {{ $section_name := "Publications" }}
-  <div class="relative w-100 mb4">
+  <div class="relative w-100 mb2">
     <section class="w-100 mw8">
       {{ range $section }}
-        <div class="bb b--black-10 relative w-100 ma1 nested-copy-line-height">
-          <div class="pa1 gray overflow-hidden">
+        <div class="bb b--black-10 relative w-100 mb2 nested-copy-line-height" style="background-color:rgb(252,251,248)">
+          <div class="ph3 pv2 gray overflow-hidden">
             <h1 class="f4 near-black mb0">
 	<a href="{{ .Permalink }}" class="link black dim">
                 {{ .Title }}
