--- a/layouts/members/list.html
+++ b/layouts/members/list.html
@@ -31,6 +31,12 @@
         </section>
       {{ end }}
 
+<h1> Group photo </h1>
+<figure>
+  <img src="\images\group\QITI_Niagara_pic_2019.jpg" alt="Niagara" style="width:100%">
+  <figcaption>(2019 summer) Lab outing in the Niagara region, Ontario.</figcaption>
+</figure>
+
         <h1> Alumni </h1>
         <section class="flex-ns flex-wrap mt1 ph2-l">
           {{ range .Site.Taxonomies.tags.alumn }}
