--- a/layouts/partials/pub-list-2.html
+++ b/layouts/partials/pub-list-2.html
@@ -17,7 +17,7 @@
 	      {{ partial "journal-link-bar.html" . }}
             </div>
             <div class='near-black'>
-              <a href="{{.Permalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt1 ph2 pv1">Read More</a>
+              <a href="{{.Permalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt1 ph2 pv1" style="background-color:rgb(230,225,230)">Read More</a>
             </div>
           </div>
         </div>
