--- a/layouts/partials/nav-bar.html
+++ b/layouts/partials/nav-bar.html
@@ -4,7 +4,7 @@
   {{ range seq 0 (sub (len $tags) 1) }}
     {{ if (index $tags .) }}
       <li class="list f4 f4-ns fw4 dib pr3">
-        <a href="{{ printf "#%s" (index $tags .) }}" class="hover-black no-underline black-50"> {{ index $tags . }} </a>
+        <a href="{{ printf "#%s" (index $tags .) }}" class="hover-black no-underline" style="color:rgb(70,64,77)"> {{ index $tags . }} </a>
       </li>
     {{ end }}
   {{ end }}
