--- a/layouts/partials/summary-with-bubble-image.html
+++ b/layouts/partials/summary-with-bubble-image.html
@@ -4,7 +4,7 @@
 {{ end }}
 {{ $featured_image := printf "%s%s" $base "-bubble.png" }}
 <article class="bb b--black-10">
-  <div class="db pv2 ph0-l dark-gray">
+  <div class="db pv2 ph0-l black">
     <div class="flex flex-row">
     {{ if $featured_image }}
       {{ if not ( fileExists (printf "static/%s" $featured_image ) )}}
@@ -25,10 +25,9 @@
 	   <a class="gray f6">
             {{ .Params.tenure }} <br>
             </a>
-	
 
         </h1>
-          <a href="{{.Permalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">{{ $.Param "read_more_copy" | default (i18n "readMore") }}</a>
+          <a href="{{.Permalink}}" class="ba b--moon-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1" style="background-color:#e1dce1">{{ $.Param "read_more_copy" | default (i18n "readMore") }}</a>
       </div>
     </div>
   </div>
