--- a/layouts/partials/summary.html
+++ b/layouts/partials/summary.html
@@ -24,7 +24,7 @@
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
           {{/* .Summary */}}
         </div>
-          <a href="{{.Permalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">{{ $.Param "read_more_copy" | default (i18n "readMore") }}</a>
+          <a href="{{.Permalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1" style="background-color:rgb(214,208,214)">{{ $.Param "read_more_copy" | default (i18n "readMore") }}</a>
       </div>
     </div>
   </div>
