adding requested feature of being able to link your google scholar to the personal page. To add google scholar just put the link for your scholar account as the corresponding value to the googleScholar: field

--- a/layouts/members/single.html
+++ b/layouts/members/single.html
@@ -40,6 +40,9 @@
           {{ else if .Params.previousInstitution }}
             <b>Previous Institution:</b> {{ .Params.previousInstitution }}<br/>
           {{ end }}
+          {{ if .Params.googleScholar }}
+          <b>Publication History: </b><a href="{{ .Params.googleScholar }}" target="_blank" class="color-inherit dim link">Google Scholar</a><br/>
+          {{ end }}
           </p>
         </div>
       </div>
