change in homepage layout - added QNC photo, minor design tweaks, added member content

--- a/layouts/members/list.html
+++ b/layouts/members/list.html
@@ -33,7 +33,7 @@
 
 <h1> Group photo </h1>
 <figure>
-  <img src="\images\group\QITI_Niagara_pic_2019.jpg" alt="Niagara" style="width:100%">
+  <img src="\images\group\QITI_Niagara_pic_2019.jpg" alt="Niagara" class="left" style="display:block;max-width:90%">
   <figcaption>(2019 summer) Lab outing in the Niagara region, Ontario.</figcaption>
 </figure>
 
