--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,5 +42,12 @@
         </div>
     {{ end }}
   {{ end }}
+<hr class="mw8-l" style="height:1px;border-width:0;margin-top: 0;margin-bottom:0;background-color:rgb(229,234,232)">
+<div class="mw8-l center pv2" style="background-color:rgb(234,236,237)">
+<figure>
+  <img src="\images\IQC_pic1.jpg" alt="QNC" class="center" style="display:block;max-width:100%">
+  <figcaption class="tc pt2">IQC - Quantum Nano Centre, University of Waterloo</figcaption>
+</figure>
+</div>
 </article>
 {{ end }}
