--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,12 +1,12 @@
+<footer class="absolute bottom-0 h3 w-100 dn dib-ns " style="background-color:rgb(63,55,56)" role="contentinfo">
 <hr style="height:2px;display: block;
   margin-top: 0em;
   margin-bottom: 0em;
   border-style: inset;
   border-width:0;
   background-color:rgb(81,72,72)">
-<footer class="bottom-0 pv4 w-100" style="background-color:rgb(63,55,56)" role="contentinfo">
-  <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline dn dib-ns pv2 ph3" style="color:rgb(222,217,217)" href="{{ .Site.BaseURL }}" >
+  <div class="flex justify-between pv3 mt1 ph3">
+  <a class="f4 fw4 hover-white no-underline" style="color:rgb(222,217,217)" href="{{ .Site.BaseURL }}" >
     &copy; {{ with .Site.Copyright | default .Site.Title }} {{ . | safeHTML }} {{ now.Format "2006"}} {{ end }}
   </a>
     <div>{{ partial "social-follow.html" . }}</div>
